0.2.4
-----
1. Fix position of play/pause and stop button in mobile layout when stop button
   is enabled.
2. Landscape layout for mobile now playing.

0.2.3
-----
 1. Fix add/edit alarm dialog not showing.
 2. Fix queue background cover not being drawn initially on mobile.
 3. Check for metadata, and cover, changes for current track in queue if it is a
    radio stream (0 duration).
 4. Fix mobile layout now playing info background and size.
 5. Draw stretched cover as now-playing background.
 6. Allow specifying player in URL via "?player=<mac>"
 7. Add option to show stop button.
 8. Fix translations not working on Android Firefox.
 9. Don't add play/add icons to sub-toolbar of top-level items (e.g. Artists,
    Albums, etc).
10. Don't crop radio logos when browsing.

0.2.2
-----
 1. Fix cover display when re-ordering favourites.
 2. Fix renmaming and deleting favourites.
 3. Use curent cover as queue background.
 4. Use curent artist, album, etc. image as browse background.
 5. When adding/playing a selection, call commands sequentially and wait for
    each to complete before doing the next.
 6. Revert cover change, and use artwork_url/coverid if supplied.
 7. Re-add option to sort favourites, disables drag'n'drop ordering.
 8. Add button to save default UI settings, and pinned items, on server.
 9. Re-add swipe to change view.
10. Fix error when browsing apps and there are none.
11. Remove 'More' menu option from years.
12. Fix pinned apps breaking browse view.

0.2.1
-----
 1. Fix plugin update check.
 2. Remove track/queue duration sleep timers, and replace with option to use
    remaining duration of current track.
 3. Remove swipe to change views; buggy, and material apps don't do this.
 4. Fix deleting playlists.
 5. Center crop background image in mobile now playing info.
 6. Don't add play actions to toolbar for track/album/atist info.
 7. Fix buttons in fullscreen image view.
 8. Remove option to sort favourites, instead allow drag'n'drop re-ordering.