@@ -58,7 +58,8 @@
     <script src="html/lib/vuetify.min.js?r=1.3.5"></script>
     <script src="html/lib/vuex.min.js?r=2.0.0"></script>
     <script src="html/lib/vue-lazyload.js?r=1.2.6"></script>
-    <script src="html/lib/vuetify-confirm.min.js"></script>
+    <script src="html/lib/vuetify-confirm.min.js?r=[% material_revision %]"></script>
+    <script src="html/lib/longpress.js?r=[% material_revision %]"></script>
     <!-- TODO: Fix and re-use virtual scroller -->
     <!--
     <script src="html/lib/intersection-observer.js?r=0.5.0"></script>
